hides overflow to eliminate background repeat with horizontal scrollbar issue

--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,8 @@ $font-stack: Ubuntu;
 $black: #352022;
 $red: #d7141a;
 
+
+
 body {
 	background: url('images/background-3.jpg') no-repeat center center; 
   -webkit-background-size: cover;
@@ -10,11 +12,13 @@ body {
   background-size: cover;
   -webkit-font-smoothing: antialiased;
   width: 100%;
+  overflow: hidden;
 }
 
 .header {
 	background: url('images/background-1.png');
 	background-repeat:repeat-x;
+	background-size: 100% 418px;
 	height: 418px;
 	width: 100%;
 	z-index: 1;
@@ -68,6 +72,7 @@ body {
 	background: url('images/background-2.png');
 	height: 239px;
 	width: 100%;
+ 	background-size: auto 100%;
 	background-repeat:repeat-x;
 	margin-top: -15px;
 	z-index: 50;
